--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-torch
-numpy
-fastapi
-uvicorn
-python-dotenv
-requests
-matplotlib
-scikit-learn
-scrapegraphai
-python-multipart
+numpy>=1.21.0
+pandas>=1.3.0
+matplotlib>=3.4.0
+torch>=1.9.0
+scikit-learn>=0.24.0
+requests>=2.26.0
+python-dotenv>=0.19.0
+fastapi>=0.68.0
+uvicorn>=0.15.0
+rich>=10.12.0
+scrapegraphai>=1.0.0
