--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-numpy>=1.21.0
-pandas>=1.3.0
-matplotlib>=3.4.0
-torch>=1.9.0
-scikit-learn>=0.24.0
-requests>=2.26.0
-python-dotenv>=0.19.0
-fastapi>=0.68.0
-uvicorn>=0.15.0
-rich>=10.12.0
+torch>=2.0.0
+numpy>=1.24.0
+fastapi>=0.100.0
+uvicorn>=0.23.0
+python-dotenv>=1.0.0
+requests>=2.31.0
+matplotlib>=3.7.0
+rich>=13.0.0
+scikit-learn>=1.3.0
 scrapegraphai>=1.0.0
+pandas>=2.0.0
+httpx>=0.24.0
+plotly>=5.18.0
