Enhance environment configuration and documentation with Mistral AI integration, data sources, and detailed architecture components

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,37 @@
 # API Keys for AI services (at least one required)
+# Mistral AI is the primary service for polling data extraction
 MISTRAL_API_KEY=your_mistral_api_key_here
+
+# OpenAI is used as a fallback if Mistral AI is unavailable
 OPENAI_API_KEY=your_openai_api_key_here
 
-# Default polling data source
+# Data Sources
+# Primary polling data source URL
 POLLING_URL=https://www.wahlrecht.de/umfragen/
+
+# Dawum API endpoint for historical data
+DAWUM_API_URL=https://api.dawum.de/
+
+# Model Configuration
+# Set to 'dhondt' or 'sainte_lague'
+DEFAULT_ALLOCATION_METHOD=dhondt
+
+# Historical data range (years)
+HISTORICAL_START_YEAR=2021
+HISTORICAL_END_YEAR=2024
+
+# Logging Configuration
+# Set to DEBUG, INFO, WARNING, ERROR, or CRITICAL
+LOG_LEVEL=INFO
+
+# API Configuration
+# Port for the FastAPI server
+API_PORT=8000
+# Enable/disable detailed error responses
+DEBUG_MODE=false
+
+# Visualization Settings
+# Enable/disable interactive plots
+ENABLE_INTERACTIVE_PLOTS=true
+# Default plot theme (light/dark)
+PLOT_THEME=light
